# dash

./: .gitignore  AGENTS.md  Cargo.toml  Design.md  Dioxus.toml  LICENSE  TODO.md  bacon.toml  config.json  flake.nix  justfile  ubuntu-build.sh
.github/actions/: ubuntu-build.yaml
.github/workflows/: ubuntu-build.yaml
assets/: tailwind.css
assets/styling/: navbar.css
src/: auth.rs  config.rs  main.rs
src/components/: echo.rs
src/ratings/: analyze.rs  api.rs  caching.rs  mod.rs  types.rs  visualize.rs
src/spotify/: analyze.rs  api.rs  caching.rs  mod.rs  playback.rs  visualize.rs
src/views/: api.rs  login.rs  mod.rs  navbar.rs  spotify.rs
