[package]
name = "dash"
version = "0.1.0"
authors = ["Jul Lang <jullanggit@proton.me>"]
license = "AGPL-3.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.102", features = ["std"], optional = true }
argon2 = "0.5.3"
async-stream = { version = "0.3.6", optional = true }
charming = { version = "0.6.0", optional = true }
dashmap = { version = "6.1.0", optional = true }
dioxus = { version = "0.7.1", features = ["fullstack", "router"] }
dioxus-sdk-time = "0.7.0"
futures = { version = "0.3.32", default-features = false }
rand = { version = "0.10.0", optional = true }
rand_core = { version = "0.6.4", optional = true, features = ["getrandom"] }
rspotify = { git = "https://github.com/jullanggit/rspotify", default-features = false, features = [
  "cli",
  "client-reqwest",
  "env-file",
  "reqwest-rustls-tls",
], optional = true }
rspotify-http = { git = "https://github.com/jullanggit/rspotify", optional = true }
rspotify-model = { git = "https://github.com/jullanggit/rspotify" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
structstruck = "0.5.1"
time = { version = "0.3.47", features = ["parsing", "serde"] }
tokio = { version = "1.50.0", default-features = false, features = [
  "fs",
], optional = true }
wasm-bindgen = "=0.2.108"  # corresponds to installed version. Can be removed if 'dx serve' works without it.

[features]
default = []
# The feature that are only required for the desktop = ["dioxus/desktop"] build target should be optional and only enabled in the desktop = ["dioxus/desktop"] feature
desktop = ["dioxus/desktop"]
# The feature that are only required for the mobile = ["dioxus/mobile"] build target should be optional and only enabled in the mobile = ["dioxus/mobile"] feature
mobile = ["dioxus/mobile"]
# The feature that are only required for the server = ["dioxus/server"] build target should be optional and only enabled in the server = ["dioxus/server"] feature
server = [
  "dep:anyhow",
  "dep:async-stream",
  "dep:charming",
  "dep:dashmap",
  "dep:rand",
  "dep:rspotify",
  "dep:rspotify-http",
  "dep:tokio",
  "dioxus/server",
]
# The feature that are only required for the web = ["dioxus/web"] build target should be optional and only enabled in the web = ["dioxus/web"] feature
web = ["dioxus/web"]
bin = ["dep:rand_core"]
